tests/NormalTests/paczka1/fuzzy1/97758645.err
Error in line 1: A697xB64M A344 77,6
Error in line 21: AYxGfBrKTM S981 127,6
